test/functions/bradc/intents/intents-strings.error1.good
intents-strings.chpl:4: In function 'foo':
intents-strings.chpl:7: error: cannot assign to const variable
intents-strings.chpl:66: Function 'foo' instantiated as: foo(x: string)
